pkg/gox/testdata/errors/mismatched.gox
package demo

func View() any {
	return (
		<main>
			<section>
				<p>Broken</main>
			</section>
		</main>
	)
}
